# learndb-py

./: main.py  pyproject.toml
backend/: __init__.py  main.py
backend/api/routes/: challenges.py  schema.py  sessions.py
backend/content/: __init__.py
backend/content/challenges/: __init__.py  aggregation.py  joins.py  registry.py  select_basics.py
backend/content/tutorials/: __init__.py
backend/core/: challenge_engine.py  learndb_adapter.py  session_manager.py
backend/models/: challenge.py
backend/schemas/: schema.py  session.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/editor/: SQLEditor.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/results/: ResultsPanel.tsx
frontend/src/pages/: ChallengeListPage.tsx  ChallengePage.tsx  SandboxPage.tsx
frontend/src/store/: challengeStore.ts  sessionStore.ts
scripts/: run_dev.sh
